@@ -72,10 +72,6 @@ try_compile(
     SOURCES ${PROJECT_SOURCE_DIR}/config-tests/PQXX_HAVE_THREAD_LOCAL.cxx
 )
 try_compile(
-    PQXX_HAVE_UNREACHABLE ${PROJECT_BINARY_DIR}
-    SOURCES ${PROJECT_SOURCE_DIR}/config-tests/PQXX_HAVE_UNREACHABLE.cxx
-)
-try_compile(
     PQXX_HAVE_YEAR_MONTH_DAY ${PROJECT_BINARY_DIR}
     SOURCES ${PROJECT_SOURCE_DIR}/config-tests/PQXX_HAVE_YEAR_MONTH_DAY.cxx
 )
