@@ -22,6 +22,5 @@ PQXX_HAVE_SSIZE	public	compiler
 PQXX_HAVE_STRERROR_R	public	compiler
 PQXX_HAVE_STRERROR_S	public	compiler
 PQXX_HAVE_THREAD_LOCAL       internal        compiler
-PQXX_HAVE_UNREACHABLE	public	compiler
 PQXX_HAVE_YEAR_MONTH_DAY	public	compiler
 VERSION	internal	autotools
