@@ -251,6 +251,7 @@ public:
     if (m_current >= max_params)
       throw range_error{pqxx::internal::concat(
         "Too many parameters in one statement: limit is ", max_params, ".")};
+    PQXX_ASSUME(m_current > 0);
     ++m_current;
     if (m_current % 10 == 0)
     {
