@@ -16,7 +16,7 @@
 #  endif
 
 /// Full libpqxx version string.
-#  define PQXX_VERSION "7.9.0"
+#  define PQXX_VERSION "7.9.1"
 /// Library ABI version.
 #  define PQXX_ABI "7.9"
 
